added pywal and minor changes

--- a/nitrogen/bg-saved.cfg
+++ b/nitrogen/bg-saved.cfg
@@ -1,4 +1,4 @@
 [dummy]
-file=/home/pial/Pictures/wallpapers/lake-alberta-scenery.jpg
+file=/home/pial/.local/share/backgrounds/wal
 mode=5
 bgcolor=#000000
