--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -111,7 +111,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Fira Mono Nerd Font
+    family: Fira Mono Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
