--- a/nitrogen/nitrogen.cfg
+++ b/nitrogen/nitrogen.cfg
@@ -1,12 +1,12 @@
 [geometry]
-posx=356
-posy=104
-sizex=450
-sizey=500
+posx=0
+posy=27
+sizex=1366
+sizey=705
 
 [nitrogen]
 view=icon
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/home/pial/Pictures/wallpapers;
+dirs=/home/pial/.local/share/backgrounds;
