--- a/nitrogen/bg-saved.cfg
+++ b/nitrogen/bg-saved.cfg
@@ -2,3 +2,8 @@
 file=/home/pial/.local/share/backgrounds/wal
 mode=5
 bgcolor=#000000
+
+[xin_-1]
+file=/home/pial/.local/share/backgrounds/wal
+mode=5
+bgcolor=#000000
