--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -29,9 +29,11 @@ separator_block_width=15
 markup=none
 
 # window title in bar
-#[window]
-#command=xtitle -s
-#interval=1
+[i3-focusedwindow]
+label=
+command=$XDG_CONFIG_HOME/i3/i3blocks-contrib/i3-focusedwindow/i3-focusedwindow 20
+interval=persist
+color=#71e880
 
 # Volume indicator
 #
@@ -47,6 +49,7 @@ instance=Master
 interval=1
 signal=10
 command=/usr/share/i3blocks/volume 5 pulse
+color=#daa5e0
 
 # Memory usage
 #
@@ -55,10 +58,16 @@ command=/usr/share/i3blocks/volume 5 pulse
 #label=🐏
 #separator=false
 #interval=30
-[MEM]
-command=free -h | awk '/Mem:/ { printf(" 🐏 %5s/%s \n", $3, $2) }'
-interval=1
-color=#FEC925
+#[MEM]
+#command=free -h | awk '/Mem:/ { printf(" 🐏 %5s/%s \n", $3, $2) }'
+#interval=1
+#color=#FEC925
+
+[memory]
+command=$XDG_CONFIG_HOME/i3/i3blocks-contrib/memory/memory
+label=🐏 
+interval=persist
+color=#62f4d9
 
 #[memory]
 #label=SWAP
@@ -121,12 +130,14 @@ interval=10
 #label=⚡
 command=$XDG_CONFIG_HOME/i3/battery.sh
 interval=30
+color=#f5ad7c
 
 [bandwidth]
 command=$XDG_CONFIG_HOME/i3/i3blocks-contrib/bandwidth2/bandwidth2 
 interval=persist
 markup=pango
 label=
+color=#779fe4
 
 # Date Time
 #
@@ -134,6 +145,7 @@ label=
 label=
 command=date '+%a - %d %b, %Y | %I:%M:%S%p |'
 interval=5
+color=#f9b634
 
 # Generic media player support
 #
@@ -165,10 +177,10 @@ interval=5
 #
 # bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 # bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-#[keyindicator]
-#instance=CAPS
-#interval=once
-#signal=11
+[keyindicator]
+instance=CAPS
+interval=once
+signal=11
 
 #[keyindicator]
 #instance=NUM
