--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Font Awesome 11
+font pango:Font Awesome 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -212,6 +212,7 @@ client.background       #ffffff
 # finds out, if available)
 bar {
         position top
+        mode dock
         status_command i3blocks -c "$XDG_CONFIG_HOME/i3/i3blocks.conf"
         colors {
                 background $bg-color
@@ -245,10 +246,16 @@ bindsym $mod+o exec --no-startup-id "rofi -show drun -show-icons"
 
 
 # start compton
-exec_always compton
+exec_always compton -b -f
+
 
 ## Hide window title
 #for_window [class="^.*"] border pixel 1
 #new_window 1pixel
 default_border pixel 1
 default_floating_border pixel 1
+
+
+bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
+bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
+
