--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -143,7 +143,7 @@ color=#779fe4
 #
 [time]
 label=
-command=date '+%a - %d %b, %Y | %I:%M:%S%p |'
+command=date '+%a - %d %b, %Y | %I:%M:%S%p '
 interval=5
 color=#f9b634
 
