--- a/i3/config
+++ b/i3/config
@@ -28,7 +28,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock-fancy -gp -- scrot -z --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -235,18 +235,18 @@ bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewi
 bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 
 ## Screen Lock
-bindsym $mod+Shift+x exec i3lock -i "$XDG_DATA_HOME/backgrounds/wal" -t
+bindsym $mod+Shift+x exec i3lock-fancy -gp -- scrot -z
 
 ## Restore my wallpaper
 exec_always --no-startup-id nitrogen --restore
 
 
 ## start rofi (also a program launcher)
-bindsym $mod+o exec --no-startup-id "rofi -show drun -show-icons"
+bindsym $mod+o exec --no-startup-id i3-dmenu-desktop
 
 
 # start compton
-exec_always compton -b -f
+exec_always compton
 
 
 ## Hide window title
@@ -256,6 +256,33 @@ default_border pixel 1
 default_floating_border pixel 1
 
 
+## Caps lock and num lock num indicator
 bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
+
+gaps inner 5
+gaps outer 0
+smart_gaps on
+
+bindsym $mod+b exec --no-startup-id firefox
+bindsym $mod+m exec --no-startup-id pcmanfm
+
+bindsym $mod+g          gaps inner current plus 2
+bindsym $mod+Shift+g    gaps inner current minus 2
+
+bindsym $mod+z          gaps outer current plus 2
+bindsym $mod+Shift+z    gaps outer current minus 2
+
+bindsym $mod+Shift+t    gaps inner all set 5; gaps outer all set 0
+bindsym $mod+Shift+d    gaps inner all set 0; gaps outer all set 0
+
+bindsym $mod+Tab        workspace back_and_forth
+
+bindsym $mod+i          exec $TERMINAL -e htop
+
+bindsym $mod+Shift+y    resize shrink width 2 px or 2 ppt
+bindsym $mod+Shift+u    resize shrink height 2 px or 2 ppt
+
+bindsym $mod+Shift+i    resize grow height 2 px or 2 ppt
+bindsym $mod+Shift+o    resize grow width 2 px or 2 ppt
