--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -28,12 +28,19 @@ command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
-# window title in bar
-[i3-focusedwindow]
-label=
-command=$XDG_CONFIG_HOME/i3blocks/i3blocks-contrib/i3-focusedwindow/i3-focusedwindow 20
+[bandwidth]
+command=$XDG_CONFIG_HOME/i3blocks/i3blocks-contrib/bandwidth2/bandwidth2 
 interval=persist
-color=#71e880
+markup=pango
+label=
+color=#779fe4
+
+# window title in bar
+#[i3-focusedwindow]
+#label=
+#command=$XDG_CONFIG_HOME/i3blocks/i3blocks-contrib/i3-focusedwindow/i3-focusedwindow 20
+#interval=persist
+#color=#71e880
 
 # Volume indicator
 #
@@ -132,12 +139,6 @@ command=$XDG_CONFIG_HOME/i3blocks/battery.sh
 interval=30
 color=#f5ad7c
 
-[bandwidth]
-command=$XDG_CONFIG_HOME/i3blocks/i3blocks-contrib/bandwidth2/bandwidth2 
-interval=persist
-markup=pango
-label=
-color=#779fe4
 
 # Date Time
 #
