--- a/nitrogen/bg-saved.cfg
+++ b/nitrogen/bg-saved.cfg
@@ -4,6 +4,6 @@ mode=5
 bgcolor=#000000
 
 [xin_-1]
-file=/home/pial/.local/share/backgrounds/0026.jpg
+file=/home/pial/.local/share/backgrounds/wal
 mode=5
 bgcolor=#000000
