mpd ncmpcpp ranger

--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -73,7 +73,7 @@ color=#daa5e0
 [memory]
 command=$XDG_CONFIG_HOME/i3blocks/i3blocks-contrib/memory/memory
 label=🐏 
-interval=persist
+interval=1
 color=#62f4d9
 
 #[memory]
