--- a/i3/config
+++ b/i3/config
@@ -42,14 +42,14 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec brightnessctl s +10 # increase screen brightness
-bindsym XF86MonBrightnessDown exec brightnessctl s 10- # decrease screen brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl s +10 # increase screen brightness
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl s 10- # decrease screen brightness
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -156,7 +156,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec --no-startup-id "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -212,8 +212,9 @@ client.background       #ffffff
 # finds out, if available)
 bar {
         position top
-        mode dock
+        mode hide
         status_command i3blocks -c "$XDG_CONFIG_HOME/i3blocks/i3blocks.conf"
+        modifier none
         colors {
                 background $bg-color
                 separator #757575
@@ -223,6 +224,8 @@ bar {
                 urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
         }
 }
+
+bindcode 133 --release bar hidden_state toggle
 
 ## Screenshots
 bindsym Print exec --no-startup-id maim "$HOME/Pictures/$(date).png"
@@ -235,7 +238,7 @@ bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewi
 bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 
 ## Screen Lock
-bindsym $mod+Shift+x exec i3lock-fancy -gp -- scrot -z
+bindsym $mod+Shift+x exec --no-startup-id i3lock-fancy -gp -- scrot -z
 
 ## Restore my wallpaper
 exec_always --no-startup-id nitrogen --restore
@@ -246,7 +249,7 @@ bindsym $mod+o exec --no-startup-id i3-dmenu-desktop
 
 
 # start compton
-exec_always picom
+exec_always --no-startup-id picom
 
 # mouse following off
 focus_follows_mouse no
@@ -269,6 +272,7 @@ gaps outer 0
 smart_gaps on
 
 bindsym $mod+b exec --no-startup-id firefox
+bindsym $mod+Shift+b exec --no-startup-id firefox --private-window
 bindsym $mod+m exec --no-startup-id pcmanfm
 
 bindsym $mod+g          gaps inner current plus 2
@@ -282,7 +286,7 @@ bindsym $mod+Shift+d    gaps inner all set 0; gaps outer all set 0
 
 bindsym $mod+Tab        workspace back_and_forth
 
-bindsym $mod+i          exec $TERMINAL -e htop
+bindsym $mod+i          exec --no-startup-id $TERMINAL -e htop
 
 bindsym $mod+Shift+y    resize shrink width 2 px or 2 ppt
 bindsym $mod+Shift+u    resize shrink height 2 px or 2 ppt
