--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,3 @@
-set -g default-terminal "xterm-256color"
 
 # Set scrollback buffer to 10000
 set -g history-limit 10000
@@ -20,41 +19,41 @@ unbind C-b
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+set -s default-terminal "tmux-256color"
+
+set -g @dracula-show-powerline true
+set -g @dracula-plugins "time"
+set -g @dracula-show-timezone false
+#set -g @dracula-show-time false
+set -g @dracula-day-month true
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-set -g @plugin 'jimeh/tmux-themepack'
-
-# set -g @themepack 'powerline/block/blue'
-
-#set -g @plugin "arcticicestudio/nord-tmux"
-set -g @plugin 'dracula/tmux'
-
 
 # Swap date to day/month
-set -g @dracula-day-month true
+#set -g @dracula-day-month true
 
 #Disable battery functionality
-set -g @dracula-show-battery false
+#set -g @dracula-show-battery false
 
 # Disable network functionality
-set -g @dracula-show-network false
+#set -g @dracula-show-network false
 
 # Disable weather functionality
-set -g @dracula-show-weather false
+#set -g @dracula-show-weather false
 
 # Disable time functionality
-set -g @dracula-show-time false
+#set -g @dracula-show-time false
 
 # Disable location information
-set -g @dracula-show-location false
+#set -g @dracula-show-location false
 
 # Enable powerline symbols
-set -g @dracula-show-powerline true
-
+#set -g @dracula-show-powerline true
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.config/tmux/plugins/tpm/tpm'
