--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,3 @@
-
 # Set scrollback buffer to 10000
 set -g history-limit 10000
 
@@ -20,7 +19,7 @@ unbind C-b
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
-set -s default-terminal "tmux-256color"
+set -s default-terminal "alacritty"
 
 set -g @dracula-show-powerline true
 set -g @dracula-plugins "time"
