--- a/lazygit/state.yml
+++ b/lazygit/state.yml
@@ -1,6 +1,7 @@
 lastupdatecheck: 0
 recentrepos:
 - /home/pial/.config
+- /home/pial/.vim
 startuppopupversion: 5
 customcommandshistory: []
 hidecommandlog: true
