- Added github cli - Added vim figutive and relative plugins for NeoVim

--- a/lazygit/state.yml
+++ b/lazygit/state.yml
@@ -1,5 +1,7 @@
 lastupdatecheck: 0
 recentrepos:
+- /home/pial/Documents/opensource/clio
+- /home/pial/Documents/opensource/comtypes
 - /home/pial/.config
 - /home/pial/.vim
 startuppopupversion: 5
